fix: extra space at the bottom of zkTools on phone

--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -352,7 +352,7 @@ body {
         transition: height $transition1;
 
         &.opened {
-          height: 370px;
+          height: auto;
         }
       }
     }
